@@ -2184,3 +2184,7 @@ span.spacer label {
 	font-weight: bold;
 	color: #c00;
 }
+
+.star {
+	color:#cc0000;
+}
