@@ -983,3 +983,7 @@ ul.pagenav li{
 	font-weight: bold;
 	color: #c00;
 }
+
+.star {
+	color:#cc0000;
+}
